--- a/src/main/resources/org/chemtrovina/cmtmsys/view/navbar-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/navbar-feature.fxml
@@ -46,6 +46,7 @@
             <items>
                 <MenuItem fx:id="menuPlanWeekly" text="Planning Weekly" />
                 <MenuItem fx:id="menuTest" text="Test view" />
+                <MenuItem fx:id="menuPlanAll" text="Plan Weekly/Daily" />
                 <MenuItem fx:id="menuFeeder" text="Feeder List" />
                 <MenuItem fx:id="menuFeederRoll" text="Attach Reel"/>
             </items>
