--- a/src/main/resources/org/chemtrovina/cmtmsys/view/feederListView-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/feederListView-feature.fxml
@@ -1,37 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.chemtrovina.cmtmsys.controller.FeederListController">
+<AnchorPane prefHeight="831.0" prefWidth="1119.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.FeederListController">
 
-    <VBox spacing="10" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10">
+    <VBox spacing="10" AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
 
         <!-- Tiêu đề -->
-        <Label text="Danh sách Feeder theo Model và Line"
-               style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-padding: 0 0 0 40;" />
+        <Label style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-padding: 0 0 0 40;" text="Danh sách Feeder theo Model và Line" />
 
         <!-- Bộ lọc chọn Model và Line -->
         <HBox spacing="10">
-            <TextField fx:id="txtModelCode" promptText="Nhập mã Model" prefWidth="200"/>
-            <ComboBox fx:id="cbModelType" promptText="Loại Model" prefWidth="150"/>
-            <ComboBox fx:id="cbLines" promptText="Chọn Line" prefWidth="200"/>
+            <TextField fx:id="txtModelCode" prefWidth="200" promptText="Nhập mã Model" />
+            <ComboBox fx:id="cbModelType" prefWidth="150" promptText="Loại Model" />
+            <ComboBox fx:id="cbLines" prefWidth="200" promptText="Chọn Line" />
             <Button fx:id="btnLoadFeeders" text="Tải danh sách" />
+            <Button fx:id="btnDeleteSelectedFeeders" text="Xóa feeder" />
+
         </HBox>
 
         <!-- Tìm kiếm Feeder -->
         <HBox spacing="10">
-            <TextField fx:id="txtFilterFeederCode" promptText="Feeder Code" prefWidth="150" />
-            <TextField fx:id="txtFilterSapCode" promptText="SAP Code" prefWidth="150" />
+            <TextField fx:id="txtFilterFeederCode" prefWidth="150" promptText="Feeder Code" />
+            <TextField fx:id="txtFilterSapCode" prefWidth="150" promptText="SAP Code" />
             <Button fx:id="btnSearchFeeder" text="Tìm kiếm" />
             <Button fx:id="btnClearSearch" text="Xoá lọc" />
         </HBox>
 
         <!-- Bảng feeder list -->
-        <TableView fx:id="tblFeederList" prefHeight="400">
+        <TableView fx:id="tblFeederList" prefHeight="652.0" prefWidth="1099.0">
             <columns>
+                <TableColumn fx:id="colNo" text="No" />
                 <TableColumn fx:id="colFeederCode" text="Feeder Code" />
                 <TableColumn fx:id="colSapCode" text="SAP Code" />
                 <TableColumn fx:id="colQty" text="Số lượng" />
@@ -40,11 +50,13 @@
         </TableView>
 
         <!-- Khu vực import -->
-        <HBox spacing="10" alignment="CENTER_LEFT">
-            <Button fx:id="btnChooseFile" text="Chọn File" prefWidth="100"/>
-            <Pane prefWidth="250" prefHeight="26" style="-fx-background-color: white; -fx-background-radius: 5;">
+        <HBox alignment="CENTER_LEFT" spacing="10">
+            <Button fx:id="btnChooseFile" prefWidth="100" text="Chọn File" />
+            <Pane prefHeight="26" prefWidth="250" style="-fx-background-color: white; -fx-background-radius: 5;">
                 <Text fx:id="txtSelectedFileName" layoutY="18" text="Chưa chọn file">
-                    <font><Font size="14.0"/></font>
+                    <font>
+                  <Font size="14.0" />
+               </font>
                 </Text>
             </Pane>
             <Button fx:id="btnImportFeederList" text="Import Feeders" />
