--- a/src/main/resources/org/chemtrovina/cmtmsys/view/ShiftSummaryView.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/ShiftSummaryView.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
 
-<?import javafx.scene.control.ListView?>
 <AnchorPane prefHeight="614.0" prefWidth="1192.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.ShiftSummaryController">
 
     <VBox spacing="10" AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
@@ -23,7 +25,16 @@
             <ComboBox fx:id="cbShiftType" />
 
             <Label text="Line:" />
-            <ListView fx:id="lvLines" prefHeight="80" prefWidth="150" />
+
+            <!-- Thay thế ListView bằng ScrollPane chứa các CheckBox -->
+            <ScrollPane prefHeight="80" prefWidth="200" style="-fx-border-color: lightgray; -fx-border-radius: 3;">
+                <VBox fx:id="vbLineCheckboxes" spacing="5" style="-fx-padding: 5;">
+                    <!-- Các CheckBox sẽ được thêm động từ controller -->
+                </VBox>
+            </ScrollPane>
+
+            <Button fx:id="btnSelectAllLines" text="Chọn tất cả" />
+            <Button fx:id="btnDeselectAllLines" text="Bỏ chọn tất cả" />
             <Button fx:id="btnSearch" text="🔍 Xem dữ liệu" />
         </HBox>
 
@@ -55,17 +66,18 @@
                 <!-- IDLE -->
                 <TableColumn text="IDLE">
                     <columns>
-                        <TableColumn fx:id="colIdleStart" text="Start" />
-                        <TableColumn fx:id="colIdleQty" text="Qty" />
                         <TableColumn fx:id="colIdleTime" text="Time sum" />
+                        <TableColumn fx:id="colIdleQty" text="Qty" />
+                        <TableColumn fx:id="colIdlePercent" text="Percent" />
                     </columns>
                 </TableColumn>
 
                 <!-- M/C -->
                 <TableColumn text="M/C">
                     <columns>
-                        <TableColumn fx:id="colMcStart" text="Start" />
+                        <TableColumn fx:id="colMcTime" text="Time sum" />
                         <TableColumn fx:id="colMcQty" text="Qty" />
+                        <TableColumn fx:id="colMcPercent" text="Percent" />
                     </columns>
                 </TableColumn>
             </columns>
