--- a/src/main/resources/org/chemtrovina/cmtmsys/view/navbar-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/navbar-feature.fxml
@@ -28,6 +28,7 @@
                 <MenuItem fx:id="btnShiftPlanEmployee" text="Phân ca nhân sự (Shift Plan)" />
                 <MenuItem fx:id="btnShiftType" text="Quản lý Loại Ca (Shift Type)" />
                 <MenuItem fx:id="btnAttendanceLog" text="Log Chấm Công (Attendance Log)" />
+                <MenuItem fx:id="btnEmployeeLeave" text="Nghỉ phép (Employee Leave)" />
             </items>
         </MenuButton>
 
@@ -39,6 +40,7 @@
                 <MenuItem fx:id="menuTransferLog" text="Lịch sử chuyển (Transfer Log)" />
                 <MenuItem fx:id="menuTransferMaterialReturn" text="Trả liệu (Material Return)" />
                 <MenuItem fx:id="menuProduct" text="Định mức (BOM)" />
+                <MenuItem fx:id="menuCreateProduct" text="➕ Tạo sản phẩm (Create Product)" />
                 <MenuItem fx:id="menuWorkOrder" text="Lệnh sản xuất (W/O)" />
                 <MenuItem fx:id="menuCheckNG" text="Check NG" />
 
